--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -172,23 +172,14 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:RecB_lifetimes_timepoints}
     \end{suppfigure*}
 
-% BF images of mutants at 0 and 30 ng/ml ciprofloxacin
-\begin{suppfigure*}[htbp]
-    \begin{center}
-    \includegraphics[width=.8\linewidth]{SI_Figures/Mutant_BF.pdf}
-    \end{center}
-    \caption{Representative defocussed brightfield images of wild-type (WT), \dreca\ and \geneteneighty\ mutants cells, in the absence and presence of ciprofloxacin (30 ng/ml).}
-    \label{SIFig:mutants_bf}
-    \end{suppfigure*}
-
 % Mutants: cell lengths upon exposure to ciprofloxacin
-\begin{suppfigure*}[htbp]
-    \begin{center}
-    \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_cell_lengths.pdf}
-    \end{center}
-    \caption{Evolution over time of the average cell length of wild-type (reproduced from Supp. Figure \ref{SIFig:Gam_cell_length} for comparison) and \dreca\ and \geneteneighty\ mutant strains exposed or not to ciprofloxacin (30 ng/ml). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between them. \ncells{56,131}.}
-    \label{SIFig:mutants_cell_lengths}
-\end{suppfigure*}
+% \begin{suppfigure*}[htbp]
+%     \begin{center}
+%     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_cell_lengths.pdf}
+%     \end{center}
+%     \caption{Evolution over time of the average cell length of wild-type (reproduced from Supp. Figure \ref{SIFig:Gam_cell_length} for comparison) and \dreca\ and \geneteneighty\ mutant strains exposed or not to ciprofloxacin (30 ng/ml). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between them. \ncells{56,131}.}
+%     \label{SIFig:mutants_cell_lengths}
+% \end{suppfigure*}
 
 % Mutants: RecB spot lifetime histogram bi-exp fits
 \begin{suppfigure*}[htbp]
