--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,7 +1,7 @@
 \section*{Discussion}
 
 \subsection*{RecB dissociation does not depend on subsequent repair steps}
-In this work, we used imaging of RecB bound to DNA to elucidate key aspects of RecBCD's processing of DSBs in vivo, focussing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Previously, it was proposed that RecBCD dissociates from DNA upon recognizing the Chi site \cite{Taylor1999}. Given RecBCD's high processivity (digesting several kilobases of DNA before recognising a Chi-site) and its processing speed ($\sim$1.6 kb/s\cite{Wiktor2018}), we can reasonably expect that most of RecB's binding time is explained by its DNA degradation prior to Chi recognition, followed by rapid disassembly after Chi. However, considering the role of the RecB nuclease domain in recruiting RecA to ssDNA \cite{Spies2006}, we questioned whether RecB's dissociation from DNA could also be triggered by its interaction with RecA. Imaging RecB in a \dreca\ mutant confirmed that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). We can hypothesise that RecBCD's conformational change upon Chi recognition induces a destabilisation of the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
+In this work, we used imaging of RecB bound to DNA to elucidate key aspects of RecBCD's processing of DSBs in vivo, focussing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Imaging RecB in a \dreca\ mutant confirmed that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). We can hypothesise that RecBCD's conformational change upon Chi recognition induces a destabilisation of the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
 
 \subsection*{RecB can be used as a marker to quantify DSB formation \emph{in-vivo}}
 Given RecBCD's high affinity for DSBs \emph{in-vivo} and our ability to detect its binding to DNA, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitment of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the wild-type, the general pathway for DSB repair suggests that RecBCD is recruited once per DSB (Figure \ref{Fig:pathways}). We can therefore reasonably expect that the observed number of RecB recruitments observed matches with the number of DSBs formed (1 to 8 per hour, depending on ciprofloxacin concentration). In the \dreca\ and \geneteneighty\ mutants however, the disruptions to the DSB repair pathway lead to multiple RecB recruitments per DSB. We are therefore not able to estimate the rate of DSB formation in these mutants.
@@ -24,7 +24,7 @@ Our observations of RecB recruitment to DNA (Figure \ref{Fig:recruitment}) and n
 \subsection*{RecA filaments accumulate under high DNA damage}
 Under exposure to high ciprofloxacin concentrations (20-30 ng/ml), we observed an accumulation of cells that contained a RecA filament (Supp. Figures \ref{SIFig:reca_structures}A and \ref{SIFig:reca_structures}B). At these ciprofloxacin concentrations, we have determined that cells undergo frequent DSBs, leading to multiple recruitments of RecB to DNA over the course of the experiment (up to 8 per hour, Figure \ref{Fig:recruitment}A). Given RecBCD's high processivity\cite{Wiktor2018}, such a high number of RecB recruitments would likely result in several kilobases of DNA being digested at different chromosomal locations, which could result in the complete absence of a homologous copy of the DSB site. In this case, we expect that the repair process will stall at the homology search stage, after formation of the RecA filament, which is consistent with our observation that a large proportion of cells contain RecA filaments following exposure to over-MIC ciprofloxacin concentrations.
 
-\subsection*{RecB binds at random positions in the bacterial nucleoid}
+\subsection*{RecB colocalises with the bacterial nucleoid}
 Imaging RecB simulteanously to the bacterial nucleoid reinforced our interpretation that long-lived RecB spots ($>$10 sec) are DNA-bound RecB molecules, and helped us understand their spatial distribution in the cell. Nucleoid compaction in \ecoli\ had previously been reported after UV irradiation\cite{Odsbu2014}, and we were able to confirm that a similar compaction occurs under ciprofloxacin treatment (Supp. Figure \ref{SIFig:nucleoid_compaction}). As expected, DNA-bound RecB molecules colocalised with the nucleoid. In the \dreca\ and \geneteneighty\ mutants, nucleoid imaging pointed out the involvement of RecA loading (and probably SOS induction) in nucleoid compaction, again confirming previous observations\cite{Odsbu2014}. The absence of any significant nucleoid compaction in the \geneteneighty\ mutant despite its ability to induce the SOS response was surprising, and could result from a significant delay in SOS induction due to the loading of RecA by the RecFOR alternative pathway.
 
 Taken together, this work provides a detailed picture of RecBCD's interaction with DNA following DSBs. We found that RecB dissociation is independent of RecA and that binding time is unaffected by DNA damage levels. Additionally, we observed changes in nucleoid conformation in response to DNA damage and examined the effects of high antibiotic levels on the formation of RecA filaments. The model we developed offers an overview of RecBCD recruitment and dissociation from DNA, depending on the strain's ability to effectively carry out or complete repair.
