--- a/Results.tex
+++ b/Results.tex
@@ -100,13 +100,10 @@ Since the duration of the RecB-DNA interaction was unaffected by the amount of D
 \end{figure}
 
 % RecB recruitment in WT
-Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will cause multiple DSBs to be repaired simultaneously, and be lethal to most cells.
+Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We estimated that in the absence of ciprofloxacin, 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8.2 $\pm$ 3.6 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will cause multiple DSBs to be repaired simultaneously, and be lethal to most cells.
 
 % RecB recruitment in mutants
-Estimating the recruitment rate of RecB to DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the \dreca\ mutant, the rate of recruitment of RecB to DSBs was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB that cannot be repaired. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD and ExoI\cite{Zahradka2009}. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
-
-% Recruitment in RecB1080
-In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/ml ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant (Figure \ref{Fig:recruitment}B). Upon DSB recognition, \teneighty\ unwinds DNA without digesting it, and dissociates $\sim$1.5 times slower than wild-type RecB (Tables \ref{tab:fit_results} and \ref{tab:fit_mutants}). After RecBCD dissociation, we expect two competing pathways to take place. Either (i) the unwound ssDNA is digested by cellular endo- and exonucleases, creating a new RecBCD substrate; or (ii) RecFOR displaces the SSB (Single-Strand DNA-Binding) protein and promotes RecA loading, allowing DNA repair by homologous recombination to proceed\cite{Ivancic-Bace_2003}. As a result, \teneighty\ can be recruited on DNA several times for each DSB (similarly to the \dreca\ mutant), but the cycle of re-recruitment can be broken by the action of RecFOR.
+Surprisingly, the rates of recruitment of RecB to DSBs in the \dreca\ and \geneteneighty\ mutants were higher than in the wild-type, both in the absence and in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}B). As in both cases the rate of DSB formation is expected to be the same between the wild-type and the mutants, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB that cannot be repaired, as was previously reported in the case of the \dreca\ mutant\cite{Capaldo1975,Skarstad1993}. In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/ml ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant (Figure \ref{Fig:recruitment}B). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs in a RecA-dependent manner, albeit with lower efficiency than wild-type cells (see discussion).
 
 % Part 3: Imaging RecA foci and filaments
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments}
@@ -137,3 +134,6 @@ In both mutant strains, the localisation of DNA-bound RecB overlapped with the b
 
 % Effect of ciprofloxacin exposure on the different mutants (probably to be removed)
 % Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths for the different strains and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \geneteneighty\ mutant cells were slightly more elongated than wild-type cells. This matches our previous observations that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage\cite{Lepore2023}. Upon exposure to ciprofloxacin, the cell length of the \geneteneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to directly load RecA on the DNA, and the use of the alternative RecFOR pathway leading to different time dynamics of the SOS response\cite{Ivancic-Bace_2003,Lepore2023}.
+
+% Recruitment in drecA
+% In the \dreca\ mutant, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD and ExoI\cite{Zahradka2009}. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
