Limited RecB lifetime by timepoint to 30 ng/ml data

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -166,9 +166,9 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 % Fitted RecB spot lifetimes at different durations of ciprofloxacin exposure
 \begin{suppfigure*}[htbp]
     \begin{center}
-    \includegraphics[width=\linewidth]{SI_Figures/RecB_lifetime_timepoints.pdf}
+    \includegraphics[width=.7\linewidth]{SI_Figures/RecB_lifetime_timepoints.pdf}
     \end{center}
-    \caption{Fitted lifetimes of short- and long-lived RecB spots, following different durations of exposure to ciprofloxacin. Coloured bars represent the fitted lifetimes, and black strokes the standard error of the mean obtained by bootstrapping. \ncells{66,764}. \nspots{170,138}}
+    \caption{Fitted lifetimes of short- and long-lived RecB spots, following different durations of exposure to 30 ng/ml ciprofloxacin. Coloured bars represent the fitted lifetimes, and black strokes the standard error of the mean obtained by bootstrapping. \ncells{18,945}. \nspots{54,475}}
     \label{SIFig:RecB_lifetimes_timepoints}
     \end{suppfigure*}
 
