--- a/Results.tex
+++ b/Results.tex
@@ -58,7 +58,7 @@ Using the timelapse data, we built histograms of RecB spot lifetimes at the diff
 % Gam
 To determine whether short- or long-lived spots resulted from RecB binding to DNA leading to SOS induction, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind to the RecBCD complex in place of DNA\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DSBs. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT}). This was confirmed by fitting the histogram with our bi-exponential decay model (Figure \ref{Fig:lifetimes}C), which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8 $\pm$ 0.9\%, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8 $\pm$ 1\%). The residual amount of long-lived RecB spots in the presence of Gam could be due to residual DNA binding despite the presence of Gam. This residual binding could also be the cause for the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DNA ends, and specifically caused long-lived spots to disappear, we can conclude that long-lived spots correspond to RecB molecules that have bound to a DSB (and we will refer to them as DSB-bound RecB throughout this article). Given that under Gam overexpression, 95\% of RecB spots were shorter than 10 sec (Figure \ref{Fig:lifetimes}D), we considered any spot with a lifetime over 10 sec to be a DNA-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely due to a combination of short-lived DNA interactions and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-bound or not.
 
-Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the presence of other DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits at 15 min intervals (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
+Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the presence of other DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
 
 \subsection*{RecB dissociation time is independent of RecA loading}
 % RecB binding time in the mutants
