--- a/Results.tex
+++ b/Results.tex
@@ -2,7 +2,7 @@
 \section*{Results}
 
 \subsection*{RecB forms long-lived spots when recruited to DSBs caused by cipro\-floxacin}
-To quantify RecB binding time to DNA in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process\cite{Lepore2019a,Lepore2023}. Due to the large size and topological constraints of the bacterial chromosome, DNA-bound RecB diffuses very slowly\cite{Lepore2023}. We therefore applied the previously developed technique of localisation enhancement\cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while immobile or slow-diffusing RecB molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}A and \ref{Fig:exp_principle}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DNA-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA\cite{Lepore2023}, which could lead to RecB spots forming independently of DNA binding. To gain more insight into the nature of RecB spots, we increased the number of induced DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2 sec interval between frames on different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1 second exposure time was optimised to detect RecB spots with good signal-to-noise, while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration was increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecules photobleaching or transitioning from a very slowly diffusing state to a rapid one. Our imaging setup therefore allowed us to visualise single very slowly diffusing RecB molecules, and to measure the time they spent in this diffusive state.
+To quantify RecB binding time to DNA in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously used and characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process\cite{Lepore2019a,Lepore2023}. Due to the large size and topological constraints of the bacterial chromosome, DNA-bound RecB diffuses very slowly\cite{Lepore2023}. We therefore applied the previously developed technique of localisation enhancement\cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while immobile or slow-diffusing RecB molecules formed diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}A and \ref{Fig:exp_principle}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DNA-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA\cite{Lepore2023}, which could lead to RecB spots forming independently of DNA binding. To gain more insight into the nature of RecB spots, we increased the number of induced DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2 sec interval between frames on different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1 second exposure time was optimised to detect RecB spots with good signal-to-noise, while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration was increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecules photobleaching or transitioning from a very slowly diffusing state to a rapid one. Our imaging setup therefore allowed us to visualise single very slowly diffusing RecB molecules, and to measure the time they spent in this diffusive state.
 
 \begin{figure}[htbp]
     \centering
@@ -89,7 +89,7 @@ Since the duration of the RecB-DNA interaction was unaffected by the amount of D
     \label{tab:fit_mutants}
 \end{table}
 
-% Part 2: Rate of recruitment of RecB on the DNA
+% Rate of recruitment of RecB on the DNA
 \subsection*{RecB binding can be used to estimate the rate of DSB formation}
 
 \begin{figure}[htbp]
@@ -130,7 +130,5 @@ The spatial distribution of nucleoid density and DNA-bound RecB was affected in 
 
 In the \geneteneighty\ mutant, the nucleoid often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). This disorganisation was especially visible in the presence of 30 ng/ml ciprofloxacin. Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be a reflection of the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
 
-In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DNA-bound RecB distributions were more centred than in wild-type cells, despite the nucleoid occupying the same fraction of the cell area (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be due to the slower growth rate of the \teneighty\ mutant resulting in a larger proportion of cells having a single centred nucleoid, rather than a bi-lobed nucleoid as seen in the wild-type and the \dreca\ mutant. Upon exposure of the \geneteneighty\ mutant to ciprofloxacin, the absence of change in the distribution of nucleoid density and DNA-bound RecB position reinforced the hypothesis that nucleoid compaction is impaired or delayed in this mutant.
+In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DSB-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DNA-bound RecB distributions were more centred than in wild-type cells, despite the nucleoid occupying the same fraction of the cell area (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be due to the slower growth rate of the \teneighty\ mutant resulting in a larger proportion of cells having a single centred nucleoid, rather than a bi-lobed nucleoid as seen in the wild-type and the \dreca\ mutant. Upon exposure of the \geneteneighty\ mutant to ciprofloxacin, the absence of change in the distribution of nucleoid density and DNA-bound RecB position reinforced the hypothesis that nucleoid compaction is impaired or delayed in this mutant.
 
-% Effect of ciprofloxacin exposure on the different mutants (probably to be removed)
-% Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths for the different strains and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \geneteneighty\ mutant cells were slightly more elongated than wild-type cells. This matches our previous observations that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage\cite{Lepore2023}. Upon exposure to ciprofloxacin, the cell length of the \geneteneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to directly load RecA on the DNA, and the use of the alternative RecFOR pathway leading to different time dynamics of the SOS response\cite{Ivancic-Bace_2003,Lepore2023}.
