Re-changed drecA/1080 order that was reversed in one sentence

--- a/Results.tex
+++ b/Results.tex
@@ -62,7 +62,7 @@ Using the Gam protein allowed us to identify DSB-bound RecB molecules as the lon
 
 \subsection*{RecB dissociation time is independent of RecA loading}
 % RecB binding time in the mutants
-Since the duration of the RecB-DNA interaction was unaffected by the amount of DNA damage, we wondered if it was an intrinsic property of RecBCD, or if dissociation of the complex was triggered by the following step in the repair process, the loading of RecA on DNA. To assess this, we used the \geneteneighty\ mutant, where RecB has lost its RecA loading activity, and the \dreca\ mutant, which lacks the RecA protein. We imaged both strains in the presence and absence of ciprofloxacin (30 ng/ml), computed histograms of RecB spot lifetimes and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DNA (Table \ref{tab:fit_mutants}). In the \dreca\ mutant, the distributions-binding lifetime of RecB was similar to the wild-type ($\sim$12 sec), both in the presence and absence of ciprofloxacin. This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of wild-type RecBCD from DNA. In contrast, \teneighty\ stayed bound to DNA for longer on average than wild-type RecB ($\sim$16 to 19 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
+Since the duration of the RecB-DNA interaction was unaffected by the amount of DNA damage, we wondered if it was an intrinsic property of RecBCD, or if dissociation of the complex was triggered by the following step in the repair process, the loading of RecA on DNA. To assess this, we used the \dreca\ mutant, which lacks the RecA protein, and the \geneteneighty\ mutant, where RecB has lost its RecA loading activity. We imaged both strains in the presence and absence of ciprofloxacin (30 ng/ml), computed histograms of RecB spot lifetimes and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DNA (Table \ref{tab:fit_mutants}). In the \dreca\ mutant, the distributions-binding lifetime of RecB was similar to the wild-type ($\sim$12 sec), both in the presence and absence of ciprofloxacin. This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of wild-type RecBCD from DNA. In contrast, \teneighty\ stayed bound to DNA for longer on average than wild-type RecB ($\sim$16 to 19 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
 
 % Table 2: RecB spot lifetime in the mutants
 \begin{table}[htbp]
