--- a/Article.tex
+++ b/Article.tex
@@ -29,11 +29,12 @@
 \author[1]{Daniel Thédié}
 \author[2]{Alessia Lepore}
 \author[1]{Lorna McLaren}
-\author[1]{Meriem El Karoui}
+\author[1,3]{Meriem El Karoui}
 
 
 \affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
 \affil[2]{Ecole Polytechnique, Paris-Saclay, France}
+\affil[3]{}  % ENS Saclay, to be filled by Meriem
 
 \maketitle
 
@@ -48,13 +49,12 @@
 \end{abstract}
 
 \begin{keywords}
-DNA repair | RecBCD | Imaging | \emph{in-vivo}
+    DNA repair | RecBCD | Imaging | \emph{in-vivo}
 \end{keywords}
 
 \begin{corrauthor}
-meriem.elkaroui\at ed.ac.uk
+    meriem.elkaroui\at ed.ac.uk
 \end{corrauthor}
-
 
 \input{Introduction}
 
@@ -65,19 +65,19 @@ meriem.elkaroui\at ed.ac.uk
 \input{Discussion}
 
 \begin{funding}
-This work has been supported by Wellcome Trust Investigator Awards (Grant No. 205008/Z/16/Z awarded to M.E.K.), a BBSRC BB/S008012/1 responsive mode award (to M.E.K.), and a Marie Skłodowska-Curie Personal Fellowship (Grant No. 101063725-BARTAS) awarded to A.L.
+    This work has been supported by Wellcome Trust Investigator Awards (Grant No. 205008/Z/16/Z awarded to M.E.K.), a BBSRC BB/S008012/1 responsive mode award (to M.E.K.), and a Marie Skłodowska-Curie Personal Fellowship (Grant No. 101063725-BARTAS) awarded to A.L.
 \end{funding}
 
 \begin{acknowledgements}
-We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD. We thank Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
+    We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD. We thank Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
 \end{acknowledgements}
 
 \begin{contributions}
-M.E.K. and D.T. conceived the experiments and designed the data analysis. D.T., A.L., and L.McL. built the strains. D.T. collected and analysed the data. M.E.K., D.T. and A.L. discussed the data. D.T. wrote the manuscript's first draft and created the figures. M.E.K., D.T. and A.L. revised the manuscript. L.McL., as the lab manager, oversaw order placements and maintained the lab organization. M.E.K. provided funding. All authors read, edited and approved the final manuscript.
+    M.E.K. and D.T. conceived the experiments and designed the data analysis. D.T., A.L., and L.McL. built the strains. D.T. collected and analysed the data. M.E.K., D.T. and A.L. discussed the data. D.T. wrote the manuscript's first draft and created the figures. M.E.K., D.T. and A.L. revised the manuscript. L.McL., as the lab manager, oversaw order placements and maintained the lab organization. M.E.K. provided funding. All authors read, edited and approved the final manuscript.
 \end{contributions}
 
 \begin{interests}
-The authors declare no competing financial interests.
+    The authors declare no competing financial interests.
 \end{interests}
 
 \section*{Bibliography}
