--- a/Article.tex
+++ b/Article.tex
@@ -23,8 +23,8 @@
 
 \begin{document}
 
-\title{RecBCD dissociation from DNA \emph{in-vivo} is independent from external factors}
-\shorttitle{}
+\title{RecBCD binding time to DNA \emph{in-vivo} is an intrinsic property of the complex}
+\shorttitle{RecBCD binding time to DNA \emph{in-vivo} is an intrinsic property of the complex}
 
 \author[1]{Daniel Thédié}
 \author[2]{Alessia Lepore}
@@ -34,16 +34,20 @@
 
 \affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
 \affil[2]{Ecole Polytechnique, Paris-Saclay, France}
-\affil[3]{}  % ENS Saclay, to be filled by Meriem
+\affil[3]{Ecole Normale Supérieure, Paris-Saclay, France}  % ENS Saclay, to be checked by Meriem
 
 \maketitle
 
 \begin{abstract}
 % Scene setting
+Repairing DNA damage is of primary importance to living organisms. Double-strand breaks are one of the most serious types of DNA damage. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination.
 % What is our main question?
+While repair dynamics downstream of RecBCD have been well characterised, it is still unclear how long the complex stays bound to DNA, and what triggers its dissociation \emph{in-vivo}.
 % What experimental setup did we use?
 % What data did we produce?
+To answer these questions, we imaged RecB at the single-molecule level, and recorded its response to different levels of DNA damage induced by the antibiotic ciprofloxacin.
 % What is the main finding?
+
 % General sentence on what the article contributes
 
 \end{abstract}
