--- a/Article.tex
+++ b/Article.tex
@@ -40,15 +40,16 @@
 
 \begin{abstract}
 % Scene setting
-Repairing DNA damage is of primary importance to living organisms. Double-strand breaks are one of the most serious types of DNA damage. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination.
+Repairing DNA damage is of primary importance for living organisms. Double-strand breaks are one of the most serious types of DNA damage. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination.
 % What is our main question?
 While repair dynamics downstream of RecBCD have been well characterised, it is still unclear how long the complex stays bound to DNA, and what triggers its dissociation \emph{in-vivo}.
 % What experimental setup did we use?
 % What data did we produce?
 To answer these questions, we imaged RecB at the single-molecule level, and recorded its response to different levels of DNA damage induced by the antibiotic ciprofloxacin.
 % What is the main finding?
-
+We found that dissociation of RecBCD from DNA is an intrinsic property of the complex, and does not depend on the amount of DNA damage, or on the next step in the repair pathway.
 % General sentence on what the article contributes
+
 
 \end{abstract}
 
