Added a conclusion to the abstract

--- a/Article.tex
+++ b/Article.tex
@@ -47,9 +47,9 @@ While repair dynamics downstream of RecBCD have been well characterised, it is s
 % What data did we produce?
 To answer these questions, we imaged RecB at the single-molecule level, and recorded its response to different levels of DNA damage induced by the antibiotic ciprofloxacin.
 % What is the main finding?
-We found that dissociation of RecBCD from DNA is an intrinsic property of the complex, and does not depend on the amount of DNA damage, or on the next step in the repair pathway.
+We found that dissociation of RecBCD from DNA is an intrinsic property of the complex, and does not depend on the amount of DNA damage, or the following steps in the repair pathway.
 % General sentence on what the article contributes
-
+This study brings in-depth insight into the binding of RecBCD to DNA in \ecoli\ \emph{in-vivo}, and into the cell's response to ciprofloxacin-induced double-strand breaks.
 
 \end{abstract}
 
