Change path to relative

--- a/Notebooks/Ciprofloxacin/Nucleoid.ipynb
+++ b/Notebooks/Ciprofloxacin/Nucleoid.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -43,7 +43,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "data = (DatasetPool(path='./../../../BACMMAN/Timelapse',\n",
+    "data = (DatasetPool(path='./../../BACMMAN_datasets',\n",
     "                    dsList=['240424_1', '240612_1', '240620_1',\n",
     "                            '240717_3', '240904_1', '240904_2',\n",
     "                            '240620_3', '240717_1', '240717_2',\n",
