Edits by Meriem El Karoui on 06/12/2024

--- a/Article.tex
+++ b/Article.tex
@@ -23,7 +23,7 @@
 
 \begin{document}
 
-\title{RecBCD binding time to DNA \emph{in-vivo} is an intrinsic property of the complex}
+\title{ Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DNA Double Strand Break repair in \emph{Escherichia coli}}
 \shorttitle{RecBCD binding time to DNA \emph{in-vivo} is an intrinsic property of the complex}
 
 \author[1]{Daniel Thédié}
@@ -40,18 +40,22 @@
 
 \begin{abstract}
 % Scene setting
-Repairing DNA damage is of primary importance for living organisms. Double-strand breaks are one of the most serious types of DNA damage. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination.
+Repairing DNA damage is of primary importance for all living organisms. DNA double-strand breaks (DSBs) are one of the most serious types of DNA damage, as they lead to loss of genetic information and death when not repaired. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination.
 % What is our main question?
-While repair dynamics downstream of RecBCD have been well characterised, it is still unclear how long the complex stays bound to DNA, and what triggers its dissociation \emph{in-vivo}.
+Although the repair dynamics downstream of RecBCD has been well characterised, it is still unclear how long this complex stays attached to DNA and what triggers its dissociation \emph{in vivo}.
 % What experimental setup did we use?
 % What data did we produce?
-To answer these questions, we imaged RecB at the single-molecule level, and recorded its response to different levels of DNA damage induced by the antibiotic ciprofloxacin.
+To answer these questions, we imaged RecB at the single-molecule level, and quantified its dynamic behaviour in bacterial cells exposed to ciprofloxacin, an antibiotic that induces DSBs.
 % What is the main finding?
-We found that dissociation of RecBCD from DNA is an intrinsic property of the complex, and does not depend on the amount of DNA damage, or the following steps in the repair pathway.
+Our results show that RecB forms long-lived complexes with DSBs (HERE WRITE le time,  15s?). The dissociation of RecB from DNA is an intrinsic property of the complex, that does not depend on the amount of DNA damage, nor the following steps in the repair pathway. Moreover, we show that we can use RecB binding to DSBs as a marker to estimate the rate of damage formation. 
 % General sentence on what the article contributes
-This study brings in-depth insight into the binding of RecBCD to DNA in \ecoli\ \emph{in-vivo}, and into the cell's response to ciprofloxacin-induced double-strand breaks.
+This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli \emph{in-vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
 
 \end{abstract}
+\begin{comment}
+******GENERAL COMMENTS: In vivo and in vitro do not take a dash between in and vivo; this needs to be corrected in all the ms. ALSO, there must be a space before the parenthesis for all the references. It also needs to be corrected for the whole ms. 
+WHEN referring to RecB binding to DNA, we need to clarify that we are looking ONLY at DSB binding (short interactions are also DAN binding but not relevant to us); there are still places in the ms where this is not clear.REGARDINDRECA: we use filament but there might be confusion between the nucleoprotein filament (a single structure) and bundles: more likely what we see. I tried to make it clear that we use filament in a "bundle"sense for this paper, but we need to check if that works*******
+\end{comment}
 
 \begin{keywords}
     DNA repair | RecBCD | Imaging | \emph{in-vivo}
@@ -78,7 +82,7 @@ This study brings in-depth insight into the binding of RecBCD to DNA in \ecoli\ 
 \end{acknowledgements}
 
 \begin{contributions}
-    M.E.K. and D.T. conceived the experiments and designed the data analysis. D.T., A.L., and L.McL. built the strains. D.T. collected and analysed the data. M.E.K., D.T. and A.L. discussed the data. D.T. wrote the manuscript's first draft and created the figures. M.E.K., D.T. and A.L. revised the manuscript. L.McL., as the lab manager, oversaw order placements and maintained the lab organization. M.E.K. provided funding. All authors read, edited and approved the final manuscript.
+    M.E.K. and D.T. conceived the experiments and designed the data analysis. D.T., A.L., and L.McL. built the strains. D.T. collected and analysed the data. M.E.K., D.T. and A.L. discussed the data. D.T. wrote the manuscript's first draft and created the figures. M.E.K., D.T. and A.L. revised the manuscript. L.McL., as the lab manager, oversaw order placements and maintained the lab organisation. M.E.K. provided funding. All authors read, edited and approved the final manuscript.
 \end{contributions}
 
 \begin{interests}
