--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,14 +1,14 @@
 \section*{Discussion}
 
 \subsection*{RecB dissociation does not depend on subsequent repair steps}
-In this work, we used imaging of RecB bound to DNA to elucidate key aspects of RecBCD's processing of DSBs in vivo, focussing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Imaging RecB in a \dreca\ mutant confirmed that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). We can hypothesise that RecBCD's conformational change upon Chi recognition induces a destabilisation of the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
+In this work, we used imaging of RecB bound to DNA to elucidate key aspects of RecBCD's processing of DSBs in vivo, focussing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DNA for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Imaging RecB in a \dreca\ mutant indicated that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). We can hypothesise that RecBCD's conformational change upon Chi recognition destabilises the complex, thereby greatly reducing its processivity, and resulting in dissociation shortly after Chi. Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation, and that it is performed by other cellular exonucleases in the \geneteneighty\ mutant.
 
 \subsection*{RecB can be used as a marker to quantify DSB formation \emph{in-vivo}}
-Given RecBCD's high affinity for DSBs \emph{in-vivo} and our ability to detect its binding to DNA, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitment of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the wild-type, the general pathway for DSB repair suggests that RecBCD is recruited once per DSB (Figure \ref{Fig:pathways}). We can therefore reasonably expect that the observed number of RecB recruitments observed matches with the number of DSBs formed (1 to 8 per hour, depending on ciprofloxacin concentration). In the \dreca\ and \geneteneighty\ mutants however, the disruptions to the DSB repair pathway lead to multiple RecB recruitments per DSB. We are therefore not able to estimate the rate of DSB formation in these mutants.
+Given RecBCD's high affinity for DSBs \emph{in vivo} and our ability to detect its binding to DNA, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitment of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the wild-type, the general pathway for DSB repair suggests that RecBCD is recruited once per DSB (Figure \ref{Fig:pathways}). We can, therefore, reasonably expect that the observed number of RecB recruitments matches the number of DSBs formed (1 to 8 per hour, depending on ciprofloxacin concentration). In the \dreca\ and \geneteneighty\ mutants, however, the DSB repair pathway disruptions lead to multiple RecB recruitments per DSB. We are therefore not able to estimate the rate of DSB formation in these mutants.
 
-It should be noted that ciprofloxacin is expected to produce double-sided DSBs, hence leading to two RecB recruitments per break. We did not take this into account in our estimation of the DSB formation rate, as it has been previously suggested that the two sides of a DSB are kept in close proximity during DNA repair\cite{Vickridge2017,Keyamura2019}, and our imaging setup would not allow us to separate two RecB spots located close together. Indeed, our timelapse images of RecB binding seldom show two spots next to each other, further supporting the idea that we are not able to resolve RecBCD binding to both sides of a DSB.
+It should be noted that ciprofloxacin is expected to produce in some cases double-sided DSBs, hence leading to two RecB recruitments per break. We did not take this into account in our estimation of the DSB formation rate, as it has been previously suggested that the two sides of a DSB are kept in close proximity during DNA repair\cite{Vickridge2017,Keyamura2019}, and our imaging setup would not allow us to separate two RecB spots located close together. Indeed, our timelapse images of RecB binding seldom show two spots next to each other, further supporting the idea that we cannot resolve RecBCD binding to both sides of a DSB.
 
-Imaging DSBs in live cells is challenging, and was previously achieved using the Gam protein of bacteriophage Mu, which binds to free double-stranded DNA ends\cite{Shee2013}. However, Gam binding to DSBs prevents RecBCD action, and therefore the repair of the breaks. Using RecBCD as a probe to label free double-stranded DNA ends allows us to monitor DSB formation in live \ecoli\ in real time, with single-cell sensitivity. It does not require the DSBs to be site-specific, and does not disturb the repair pathway, which makes it possible to induce sub-lethal amounts of DSBs and image the cell's response. This tool could be further improved in the future by substituting the Halo-tag with a bright and photostable fluorescent protein, which would enable long-term imaging, for example in a mother-machine microfluidic device.
+Imaging DSBs in live cells is challenging and was previously achieved using the Gam protein of bacteriophage Mu, which binds to free double-stranded DNA ends\cite{Shee2013}. However, Gam binding to DSBs prevents RecBCD action, and therefore the repair of the breaks. Using RecBCD as a probe to label-free double-stranded DNA ends allows us to monitor DSB formation in live \ecoli\ in real-time, with single-cell sensitivity without perturbing the repair process. It does not require the DSBs to be site-specific, and does not disturb the repair pathway, which makes it possible to induce sub-lethal amounts of DSBs and image the cell's response. This tool could be further improved by substituting the Halo tag with a bright and photostable fluorescent protein, enabling long-term imaging, for example, in a mother-machine microfluidic device.
 
 \subsection*{RecB is recruited to DNA multiple times in the $\mathbf{\Delta}$\emph{reca} and RecB$\mathbf{_{1080}}$ mutants}
 
